# automated-thalweg-extractor

./: HANDOVER-01.md  HANDOVER.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  terrain_assessment.py
data/: README.md
examples/: dem.tif  dem_reprojected.tif  landcover.tif  landcover_reprojected.tif  thalweg_network.tif
notebooks/: Ayan Kumar_Zijun_project-definition.ipynb  results_report.ipynb
prompts/: AI_DIARY.md  llm_log.md
src/: aoi_test.py
src/terrain_pipeline/: aoi.py  dem.py  landcover.py  logger.py  processor.py  roughness.py  thalweg.py  visualizer.py
